[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Node2D.gd" type="Script" id=2]
[ext_resource path="res://Label.gd" type="Script" id=3]
[ext_resource path="res://Classic Node.gd" type="Script" id=4]
[ext_resource path="res://Scene.gd" type="Script" id=5]
[ext_resource path="res://addons/smoothing/smoothing_2d.gd" type="Script" id=6]
[ext_resource path="res://SmoothingNode.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Scene" type="Node2D"]
script = ExtResource( 5 )

[node name="Duke_Smoother" type="Node2D" parent="."]
position = Vector2( 88, 96 )
script = ExtResource( 2 )

[node name="Smooth" type="Node2D" parent="Duke_Smoother"]
scale = Vector2( 0.76, 1 )

[node name="icon" type="Sprite" parent="Duke_Smoother/Smooth"]
texture = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Duke_Smoother"]
scale = Vector2( 0.760001, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Duke_Smoother/KinematicBody2D"]
shape = SubResource( 1 )

[node name="SmoothingNode" type="Node2D" parent="."]
modulate = Color( 0.266667, 0.854902, 0.552941, 1 )
position = Vector2( 88, 256 )
script = ExtResource( 7 )

[node name="Smoothing2D" type="Node2D" parent="SmoothingNode"]
script = ExtResource( 6 )
target = NodePath("../KinematicBody2D")
flags = 7

[node name="icon" type="Sprite" parent="SmoothingNode/Smoothing2D"]
scale = Vector2( 0.76, 1 )
texture = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="SmoothingNode"]
scale = Vector2( 0.760001, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmoothingNode/KinematicBody2D"]
shape = SubResource( 1 )

[node name="Classic Node" type="Node2D" parent="."]
modulate = Color( 0.843137, 0.411765, 0.278431, 1 )
position = Vector2( 88, 416 )
script = ExtResource( 4 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Classic Node"]
scale = Vector2( 0.760001, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Classic Node/KinematicBody2D"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="Classic Node/KinematicBody2D"]
scale = Vector2( 0.999999, 1 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ITS_Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 544.0
margin_right = 193.0
margin_bottom = 558.0
text = "Physics Iteration/Seconds : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ITS_Value" type="Label" parent="."]
margin_left = 192.0
margin_top = 544.0
margin_right = 240.0
margin_bottom = 558.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ITS_Edit" type="LineEdit" parent="."]
margin_left = 224.0
margin_top = 536.0
margin_right = 282.0
margin_bottom = 560.0
text = "60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ITS_Edit"]
margin_left = 64.0
margin_right = 112.0
margin_bottom = 24.0
text = "Set"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS_Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 576.0
margin_right = 193.0
margin_bottom = 590.0
text = "Frame Per Seconds : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS_Value" type="Label" parent="."]
margin_left = 192.0
margin_top = 576.0
margin_right = 240.0
margin_bottom = 590.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS_Edit" type="LineEdit" parent="."]
margin_left = 224.0
margin_top = 568.0
margin_right = 282.0
margin_bottom = 592.0
text = "75"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_FPS" type="Button" parent="FPS_Edit"]
margin_left = 64.0
margin_right = 112.0
margin_bottom = 24.0
text = "Set"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ITS_Edit/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="FPS_Edit/Button_FPS" to="." method="_on_Button_FPS_pressed"]
